[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/title_scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/online_node.gd" type="Script" id=2]
[ext_resource path="res://scenes/master_scene.gd" type="Script" id=3]
[ext_resource path="res://camera2d.tscn" type="PackedScene" id=4]

[node name="MasterScene" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="SceneFade" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="OnlineNode" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="TitleScene" parent="CanvasLayer2" instance=ExtResource( 1 )]
unique_name_in_owner = true
